_sass/template/components/_component--contact.scss
/**
  * Component: Contact
  *  
  * @description
  * -
  */

#contact {
  width: 100vw;
  background-color: color(green, XXX);
  color: color(neutral, X);
  padding-top: bl(12);
  scroll-margin-top: 72px;

  .contact__text {
    @include grid-parent($grid-mobile);
    @include respond-to(m){
      @include grid-parent($grid-16);
    }
    // @include stack(lg);
  }  

  .contact__title {
    color: color(neutral, X);
    grid-column: 1 / -1;
  }

  .contact__blurb {
    grid-column: 1 / -1;
    @include stack(md);
    @include respond-to(m){
      grid-column: 1 / 7;
    }
  }

  .contact__form {
    grid-column: 1 / -1;
    @include stack(lg);
    position: relative;
    @include respond-to(m){
      grid-column: 7 / -1;
      margin-top: -11px;
    }
  }

  .contact__form label {
    display: block;
    // @include stack(xs);
    padding-bottom: bl(4) !important;
  }

  .contact__email,
  .contact__message {
    width: 100%;
    @include stack(sm);
    @include typestyle($sans-sm-reg);
    background-color: color(green, XXX);
    border: solid 1.5px rgba(222, 230, 223, .5);
    color: color(green, X);
    outline: none;
    padding: bl(3);
    box-sizing: border-box;
    border-radius: 8px;
    margin-top: 24px;
  }

  .contact__email:focus,
  .contact__message:focus {
    border: solid 1.5px rgba(222, 230, 223, 1);
    color: color(green, X);
    outline: none;
  }

  .contact__form .contact__email,
  .contact__form .contact__email:focus {
    border-left: none;
    border-top: none;
    border-right: none;
    border-radius: 0;
  }

  label.floater {
    transition: all .1s ease-in;
  }
  
  label.js_unfloat {
    display: block;
    position: absolute;
    top: 8px;
    pointer-events: none;
    opacity: .6;
  }

  label.js_float {
    top: -20px;
    font-size: 14px;
    opacity: 1;
    position: absolute;
  }

  .floater:after{
    content: '';
    background-image: url(../images/blinker.gif);
    width: 11px;
    height: 21px;
    display: inline-block;
    margin-left: 8px;
  }

  label.js_float:after {
    display: none;
  }

  .contact__message{
    background-color: #474A45;
    border-color: #474A45;
  }

  .contact__message::placeholder {
    @include typestyle($sans-sm-bld);
  }

  .contact__services {
    border: none;
    padding: 0;
    @include grid-child($cols: 3);
    @include stack(md);
  }

  .contact__services legend {
    display: inline-block;
    padding-bottom: bl(4);
  }

  .contact__services label {
    display: inline-block;
    @include typestyle($sans-sm-reg);
    padding-bottom: bl(3);
  }

  .contact__form button {
    @include typestyle($sans-sm-bld);
    height: 42px;
    border-radius: 60px;
    padding: bl(2) bl(4);
    background-color: color(green, XX);
    border: 2px solid color(green, XX);
    text-align: center;
    color: color(green, XXX);
    transition: all .1s ease-in;


    &:hover {
      text-decoration: none;
      border-color: color(green, X);
      color: color(green, X);
      background-color: color(green, XXX);
    }
  }
}

